k8s/grafana/grafana-ext-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30013
