k8s/grafana/grafana-local-serice.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-local
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http-grafana
  type: ClusterIP
